--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "emoji-picker-react": "^3.1.4",
     "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "query-string": "^6.11.1",
     "react": "^16.13.1",
+    "react-avatar": "^3.9.2",
     "react-dom": "^16.13.1",
     "react-emoji": "^0.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-scroll-to-bottom": "^1.3.2",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
